# Ppchem-MP-predictor

./: LICENSE.txt  README.md  process_report.ipynb  pyproject.toml
.github/workflows/: main.yml
Alcane_analysis/: Alcane_data_visualization.ipynb  NeurNet_alcane.ipynb  NonBenzene_data_visualization.ipynb  full_validation.csv  no_benzene_for_train.xlsx  non_aromatic_to_train.csv  rf_nonbenzene_model.pkl  ~$non_benzene_descriptors.xlsx
Alcane_analysis/.ipynb_checkpoints/: NeurNet_alcane-checkpoint.ipynb  NonBenzene_data_visualization-checkpoint.ipynb
Data/: Datacleaning.ipynb  cleaned_data.xlsx  validation_descriptors.csv
Data/scrapping/: PubChem_comp_with_mp_list_.xlsx
Data/splitting_for_training/: train.csv  validation.csv
Malo/: NeurNet_Hbond.ipynb  NonBenzene_data_visualization.ipynb  carbon_with_function.ipynb  non_benz_with_function.ipynb  process_report.ipynb
Malo/Predictor/: model.pt  predict.ipynb
Malo/finished_notebooks/: 1.Data_cleaning.ipynb  2. rdkit_descriptors_extraction.ipynb  2.1 mordred_descriptors_extraction.ipynb  3. first_model_training.ipynb  report_models_selection.ipynb
Malo/moleculAR/: Example_melting_point.ipynb  README.md  setup.py
Malo/pubchem_mp_scraping/: puchem_scraping.ipynb
Ricardo/Benzene/: Aromatic_to_train.csv
notebooks/: GUI_mac.ipynb  GUI_windows.ipynb  process_report.ipynb  report_model_evaluation.ipynb  report_models_selection.ipynb  report_puchem_scraping.ipynb
scripts/: chemprop_model.pt  predictor.py  regression_models.py
tests/: test_predictor.py  test_regression_models.py
(+28 files in other folders)
